added JWT auth
